# chess-rating-chart

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  action.yml  pyproject.toml
src/: chess.py  debug.py  env.py  file.py  github_manager.py  main.py
