[project]
name = "chess-rating-chart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asciichartpy>=1.5.25",
    "gitpython>=3.1.43",
    "httpx>=0.27.2",
    "humanize>=4.10.0",
    "pygithub>=2.4.0",
]

[project.optional-dependencies]
dev-dependencies = [
    "bandit>=1.7.10",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "ruff>=0.6.8",
]


[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]
ignore-init-module-imports = true

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.bandit]
skips = []
